k8s/accounts.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-database-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-database
  template:
    metadata:
      labels:
        app: accounts-database
    spec:
      containers:
        - name: accounts-database
          image: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-pod
  template:
    metadata:
      labels:
        app: accounts-pod
    spec:
      containers:
        - name: accounts
          image: luccazvps/blog-accounts
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-srv
spec:
  type: ClusterIP
  selector:
    app: accounts-pod
  ports:
    - port: 3000
      targetPort: 3000
      name: accounts-port
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-database-srv
spec:
  type: ClusterIP
  selector:
    app: accounts-database
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
      name: accounts-port
