k8s/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-database-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-database
  template:
    metadata:
      labels:
        app: auth-database
    spec:
      containers:
        - name: auth-database
          image: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-pod
  template:
    metadata:
      labels:
        app: auth-pod
    spec:
      containers:
        - name: auth
          image: luccazvps/blog-auth
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  type: ClusterIP
  selector:
    app: auth-pod
  ports:
    - port: 3000
      targetPort: 3000
      name: auth-port
---
apiVersion: v1
kind: Service
metadata:
  name: auth-database-srv
spec:
  type: ClusterIP
  selector:
    app: auth-database
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
      name: auth-port
