k8s/categories.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categories-database-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: categories-database
  template:
    metadata:
      labels:
        app: categories-database
    spec:
      containers:
        - name: categories-database
          image: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categories-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: categories-pod
  template:
    metadata:
      labels:
        app: categories-pod
    spec:
      containers:
        - name: categories
          image: luccazvps/blog-categories
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: categories-srv
spec:
  type: ClusterIP
  selector:
    app: categories-pod
  ports:
    - port: 3000
      targetPort: 3000
      name: categories-port
---
apiVersion: v1
kind: Service
metadata:
  name: categories-database-srv
spec:
  type: ClusterIP
  selector:
    app: categories-database
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
      name: categories-port
