k8s/mail.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-database-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-database
  template:
    metadata:
      labels:
        app: mail-database
    spec:
      containers:
        - name: mail-database
          image: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-pod
  template:
    metadata:
      labels:
        app: mail-pod
    spec:
      containers:
        - name: mail
          image: luccazvps/mail
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mail-srv
spec:
  type: ClusterIP
  selector:
    app: mail-pod
  ports:
    - port: 3000
      targetPort: 3000
      name: mail-port
---
apiVersion: v1
kind: Service
metadata:
  name: mail-database-srv
spec:
  type: ClusterIP
  selector:
    app: mail-database
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
      name: mail-port
