k8s/posts.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-database-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-database
  template:
    metadata:
      labels:
        app: posts-database
    spec:
      containers:
        - name: posts-database
          image: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-pod
  template:
    metadata:
      labels:
        app: posts-pod
    spec:
      containers:
        - name: posts
          image: luccazvps/blog-posts
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: ClusterIP
  selector:
    app: posts-pod
  ports:
    - port: 3000
      targetPort: 3000
      name: posts-port
---
apiVersion: v1
kind: Service
metadata:
  name: posts-database-srv
spec:
  type: ClusterIP
  selector:
    app: posts-database
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
      name: posts-port
