k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/posts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: posts-srv
                port:
                  number: 3000
          - path: /api/accounts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: accounts-srv
                port:
                  number: 3000
          - path: /api/categories/?(.*)
            pathType: Prefix
            backend:
              service:
                name: categories-srv
                port:
                  number: 3000
